# Ros2AmovG1

./: Readme.md  config.yaml
g1_camera/: CMakeLists.txt  package.xml
g1_camera/src/: g1_camera_node.cpp
g1_control/: CMakeLists.txt  package.xml
g1_control/src/: g1_control_node.cpp
g1_gimbal/: CMakeLists.txt
g1_gimbal/include/amovGimbal/: amov_gimbal.h  amov_gimbal_c.h  amov_gimbal_struct.h
g1_gimbal/src/: g1_gimbal_node.cpp
g1_gimbal/src/serial/: CMakeLists.txt
src/drone_detector/drone_detector/: drone_detector_node.py
src/g1_camera/: package.xml
src/g1_camera/src/: g1_camera_node.cpp
src/g1_gimbal/: CMakeLists.txt  package.xml
src/g1_gimbal/src/: gimbal_node.cpp  gimbal_node.cpp.bak
src/g1_gimbal/src/serial/: CMakeLists.txt
src/spot_detector/src/: spot_detector_node.cpp
src/video_play/src/: video_play_node.cpp
